<resources>
    <string name="app_name">Mad Level 1Task 2</string>
    <string name="top_title">Conjunction (AND)</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="A_B">A^B</string>
    <string name="T">T</string>
    <string name="F">F</string>
    <string name="submit">SUBMIT</string>
    <string name="correct_answers">Correct answers: %d</string>
    <string name="all_answer_correct">CONGRATULATIONS!! You have all %d answers correct!</string>
    <string name="all_answers_wrong">Sadly, you have %d good answers, try again, you can do this!!</string>
</resources>